fix overflow on watch list container

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ body,html {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 .watch-list-container::-webkit-scrollbar {
